2016-03-12  Allen D. Ball  <ball@sol.local>

	* Initial writing.
