@@ -7,13 +7,21 @@ package ball.http.ant.taskdefs;
 
 import ball.activation.ReaderWriterDataSource;
 import ball.io.IOUtil;
+import ball.util.AbstractPredicate;
+import ball.util.FilteredIterator;
+import ball.util.MapUtil;
+import ball.util.PropertiesImpl;
 import ball.util.ant.taskdefs.AbstractClasspathTask;
 import ball.util.ant.taskdefs.AntTask;
 import ball.util.ant.types.StringAttributeType;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
+import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
 import org.apache.http.Header;
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpEntityEnclosingRequest;
@@ -29,9 +37,9 @@ import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.apache.tools.ant.BuildException;
 
+import static ball.activation.ReaderWriterDataSource.CONTENT_TYPE;
 import static ball.util.StringUtil.NIL;
 import static ball.util.StringUtil.isNil;
-import static ball.activation.ReaderWriterDataSource.CONTENT_TYPE;
 
 /**
  * Abstract {@link.uri http://ant.apache.org/ Ant} base
@@ -43,12 +51,14 @@ import static ball.activation.ReaderWriterDataSource.CONTENT_TYPE;
  * @version $Revision$
  */
 public abstract class HTTPTask extends AbstractClasspathTask {
+    private static final String AMPERSAND = "&";
     private static final String DOT = ".";
+    private static final String EQUALS = "=";
 
     private URI uri = null;
-    private final ArrayList<StringAttributeType> parameters =
-        new ArrayList<>();
-    private final ArrayList<StringAttributeType> headers = new ArrayList<>();
+    private String query = null;
+    private final List<StringAttributeType> parameters = new ArrayList<>();
+    private final List<StringAttributeType> headers = new ArrayList<>();
     private String content = null;
 
     /**
@@ -58,6 +68,9 @@ public abstract class HTTPTask extends AbstractClasspathTask {
 
     public URI getURI() { return uri; }
     public void setURI(String string) { this.uri = URI.create(string); }
+
+    public String getQuery() { return query; }
+    public void setQuery(String query) { this.query = query; }
 
     public void addConfiguredParameter(StringAttributeType parameter) {
         parameters.add(parameter);
@@ -74,6 +87,128 @@ public abstract class HTTPTask extends AbstractClasspathTask {
     public String getContent() { return content; }
     public void setContent(String content) { this.content = content; }
 
+    /**
+     * Method to construct the {@link HTTPTask}-specific
+     * {@link HttpUriRequest}.
+     *
+     * @return  The {@link HttpUriRequest}.
+     */
+    protected abstract HttpUriRequest request();
+
+    /**
+     * Method to configure the {@link HTTPTask} {@link HttpUriRequest}.
+     * See {@link #execute()} and {@link #request()}.
+     *
+     * @param   request         The {@link HttpUriRequest}.
+     */
+    protected void configure(HttpUriRequest request) throws Exception {
+        String method = request.getMethod().toUpperCase();
+        Properties properties =
+            getPrefixedProperties(method + DOT, getProject().getProperties());
+
+        if (getURI() != null) {
+            setRequestURI(request, getURI());
+        } else if (properties.containsKey("uri")) {
+            setRequestURI(request, URI.create(properties.getProperty("uri")));
+        }
+
+        if (! isNil(getQuery())) {
+            addToRequestURIQuery(request, getQuery());
+        } else if (properties.containsKey("query")) {
+            addToRequestURIQuery(request, properties.getProperty("query"));
+        }
+
+        if (! parameters.isEmpty()) {
+            addToRequestURIQuery(request, asQuery(parameters));
+        } else {
+            Properties parameters =
+                getPrefixedProperties("parameter" + DOT, properties);
+
+            addToRequestURIQuery(request, asQuery(parameters.entrySet()));
+        }
+
+        if (! headers.isEmpty()) {
+            addToRequestHeaders(request, headers);
+        } else {
+            Properties headers =
+                getPrefixedProperties("header" + DOT, properties);
+
+            addToRequestHeaders(request, headers.entrySet());
+        }
+
+        if (! isNil(getContent())) {
+            setRequestEntity(request, getContent());
+        } else if (properties.containsKey("content")) {
+            setRequestEntity(request, properties.getProperty("content"));
+        }
+    }
+
+    private Properties getPrefixedProperties(String prefix, Map<?,?> map) {
+        return MapUtil.copy(new EntryKeyPrefixedWith(prefix, map),
+                            new PropertiesImpl());
+    }
+
+    private void setRequestURI(HttpUriRequest request, URI uri) {
+        ((HttpRequestBase) request).setURI(uri);
+    }
+
+    private void addToRequestURIQuery(HttpUriRequest request,
+                                      String query) throws Exception {
+        URI uri = request.getURI();
+
+        if (uri != null && (! isNil(query))) {
+            StringBuilder buffer = new StringBuilder();
+
+            if (! isNil(uri.getQuery())) {
+                buffer.append(uri.getQuery());
+            }
+
+            if (! isNil(buffer)) {
+                buffer.append(AMPERSAND);
+            }
+
+            buffer.append(query);
+
+            setRequestURI(request,
+                          new URI(uri.getScheme(), uri.getAuthority(),
+                                  uri.getPath(),
+                                  buffer.toString(), uri.getFragment()));
+        }
+    }
+
+    private String asQuery(Iterable<? extends Map.Entry<?,?>> iterable) {
+        StringBuilder buffer = new StringBuilder();
+
+        for (Map.Entry<?,?> entry : iterable) {
+            if (! isNil(buffer)) {
+                buffer.append(AMPERSAND);
+            }
+
+            buffer
+                .append(entry.getKey())
+                .append(EQUALS)
+                .append(entry.getValue());
+        }
+
+        return buffer.toString();
+    }
+
+    private void addToRequestHeaders(HttpRequest request,
+                                     Iterable<? extends Map.Entry<?,?>> iterable) {
+        for (Map.Entry<?,?> entry : iterable) {
+            request.addHeader(entry.getKey().toString(),
+                              entry.getValue().toString());
+        }
+    }
+
+    private void setRequestEntity(HttpUriRequest request,
+                                  String content) throws Exception {
+        if (! isNil(content)) {
+            ((HttpEntityEnclosingRequest) request)
+                .setEntity(new StringEntity(content));
+        }
+    }
+
     @Override
     public void execute() throws BuildException {
         super.execute();
@@ -84,51 +219,14 @@ public abstract class HTTPTask extends AbstractClasspathTask {
             client = HttpClientBuilder.create().build();
 
             HttpUriRequest request = request();
-            String method = request.getMethod();
 
-            ((HttpRequestBase) request).setURI(getURI());
-
-            if (! parameters.isEmpty()) {
-                URI uri = request.getURI();
-
-                if (uri != null) {
-                    String query = uri.getQuery();
-
-                    for (StringAttributeType parameter : parameters) {
-                        String string =
-                            parameter.getName() + "=" + parameter.getValue();
-
-                        if (isNil(query)) {
-                            query = string;
-                        } else {
-                            query += "&" + string;
-                        }
-                    }
-
-                    if (! isNil(query)) {
-                        uri =
-                            new URI(uri.getScheme(), uri.getAuthority(),
-                                    uri.getPath(), query, uri.getFragment());
-                    }
-
-                    ((HttpRequestBase) request).setURI(uri);
-                }
-            }
-
-            for (StringAttributeType header : headers) {
-                request.addHeader(header.getName(), header.getValue());
-            }
-
-            if (! isNil(getContent())) {
-                ((HttpEntityEnclosingRequest) request)
-                    .setEntity(new StringEntity(getContent()));
-            }
+            configure(request);
 
             log(request);
+            log(NIL);
 
             HttpResponse response = client.execute(request);
 
-            log(NIL);
             log(response);
         } catch (BuildException exception) {
             throw exception;
@@ -141,13 +239,8 @@ public abstract class HTTPTask extends AbstractClasspathTask {
     }
 
     /**
-     * Method to construct the {@link HTTPTask}-specific
-     * {@link HttpUriRequest}.
-     *
-     * @return  The {@link HttpUriRequest}.
+     * See {@link #log(String)}.
      */
-    protected abstract HttpUriRequest request();
-
     protected void log(HttpMessage message) {
         if (message instanceof HttpRequest) {
             log(String.valueOf(((HttpRequest) message).getRequestLine()));
@@ -208,11 +301,7 @@ public abstract class HTTPTask extends AbstractClasspathTask {
         public Get() { super(); }
 
         @Override
-        protected HttpUriRequest request() {
-            HttpGet request = new HttpGet();
-
-            return request;
-        }
+        protected HttpUriRequest request() { return new HttpGet(); }
     }
 
     /**
@@ -230,10 +319,50 @@ public abstract class HTTPTask extends AbstractClasspathTask {
         public Post() { super(); }
 
         @Override
-        protected HttpUriRequest request() {
-            HttpPost request = new HttpPost();
+        protected HttpUriRequest request() { return new HttpPost(); }
+    }
 
-            return request;
+    private class EntryKeyPrefixedWith
+                  extends FilteredIterator<Map.Entry<?,?>> {
+        public EntryKeyPrefixedWith(String prefix, Map<?,?> map) {
+            this(prefix, map.entrySet());
+        }
+
+        public EntryKeyPrefixedWith(String prefix,
+                                    Iterable<? extends Map.Entry<?,?>> iterable) {
+            super(new KeyStartsWith(prefix), iterable);
+        }
+
+        @Override
+        public KeyStartsWith getPredicate() {
+            return (KeyStartsWith) super.getPredicate();
+        }
+
+        @Override
+        public Map.Entry<?,?> next() {
+            Map.Entry<?,?> entry = super.next();
+            Object key =
+                entry.getKey().toString()
+                .substring(getPredicate().getPrefix().length());
+
+            return new AbstractMap.SimpleEntry<>(key, entry.getValue());
+        }
+    }
+
+    private class KeyStartsWith extends AbstractPredicate<Map.Entry<?,?>> {
+        private final String prefix;
+
+        public KeyStartsWith(String prefix) {
+            super();
+
+            this.prefix = prefix;
+        }
+
+        public String getPrefix() { return prefix; }
+
+        @Override
+        public boolean apply(Map.Entry<?,?> entry) {
+            return entry.getKey().toString().startsWith(prefix);
         }
     }
 }
